syntax = "proto3";
package configmodel;
import "google/protobuf/empty.proto";

// option java_multiple_files = true;
// option java_package = "io.grpc.configmodel";
// option java_outer_classname = "ConfigModel";
option go_package = "./configmodel";


// The authentication service definition.
service Authentication {
  // Sends a login request
  rpc Login (LoginRequest) returns (LoginReply) {}
  rpc Ping (google.protobuf.Empty) returns (Pong) {}
}

// The request message containing the user's name and password.
message LoginRequest {
  string name = 1;
  string password = 2;
}

// The response message containing the login token.
message LoginReply {
  string token = 1;
}

// A test response for authentication.
message Pong {
  string message = 1;
}
